fix   z-index:

--- a/src/sass/layouts/burger.module.scss
+++ b/src/sass/layouts/burger.module.scss
@@ -5,6 +5,7 @@
 .burger__box {
   opacity: 0;
   position: relative;
+  z-index: 10;
 
   animation: animationLeft 1.2s ease forwards 0.5s;
 }
@@ -75,7 +76,6 @@
   position: absolute;
   right: 0;
   top: 0px;
-
   flex-shrink: 0;
   border-radius: 25px;
   background: var(--background-menu);
